1998-10-04  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* Makefile.am (CURRENT,REVISION,AGE): No changes. Swarm 1.3.1 released.

	* find_executable.c (find_executable): Cast program name to char *
	to avoid warning on systems that have realpath program argument
	non-const.

1998-10-01  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* misc.h: Include <swarmconfig.h> instead of "swarmconfig.h".

1998-08-24  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* Makefile.am (CURRENT): Increment.  Swarm 1.3 released.

1998-08-21  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* misc.h (XFREE): Add.

	* realpath.c (realpath): MAXPATHLEN includes the null.
	Thanks to Kim Shrier.

1998-08-19  Marcus G. Daniels  <mgd@helen.santafe.edu>
	
	* misc.h: Include sys/types.h and sys/stat.h.

1998-08-11  Marcus G. Daniels  <mgd@helen.santafe.edu>

	* misc.h, getopt.c, getopt1.c, argp-fmtstream.c, argp-help.c,
	argp-parse.c, argp-pvh.c, argp-xinl.c, argp-fs-xinl.c, argp-fmtstream.h:
	Include swarmconfig.h instead of config.h.

1998-07-23  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* argp.h: Only define program_invocation_name and
	program_invocation_short_name in the absence of glibc.

	* argp-parse.c (argp_default_parser): Cast arg as (char *) for
	assignment to program_invocation_name and
	program_invocation_short_name.

1998-07-21  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* misc.h: Note expectation of atoi, getenv, and qsort getting
	declared by stdlib.h.  Include unistd.h and time.h and note
	purpose.  Declare gettimeofday for cygwin32. 

	* Makefile.am (libmisc_la_LIBADD): Use LIBOBJS instead of MISCOBJS
	(accompanying automake changes).

1998-07-20  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* realpath.c (realpath): Renamed from myrealpath.

	* misc.h: Include string.h stdlib.h, and config.h.

	* find_executable.c (find_executable): Use realpath instead of 
	myrealpath.

	* Makefile.am (libmisc_la_LIBADD): Set to substituted value