@@ -1,6 +1,14 @@
-1998-10-04  Marcus G. Daniels  <mgd@wijiji.santafe.edu>
+1998-10-10  Marcus G. Daniels  <mgd@sangre.santafe.edu>
 
-	* Makefile.am (CURRENT,REVISION,AGE): No changes. Swarm 1.3.1 released.
+	* Makefile.am (CURRENT,AGE): Increment. Swarm 1.3.1 released.
+
+	* Makefile.am (SRC): Add dropdir.c.
+
+	* misc.h (dropdir): Declare.
+
+	* dropdir.c: New file.
+
+1998-10-04  Marcus G. Daniels  <mgd@wijiji.santafe.edu>
 
 	* find_executable.c (find_executable): Cast program name to char *
 	to avoid warning on systems that have realpath program argument
